objects/LLC_BI__Financial_Report__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Addback_Comments__c</fullName>
        <label>Addback Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amort_Source__c</fullName>
        <label>Amort Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BTR</fullName>
                </value>
                <value>
                    <fullName>PTR</fullName>
                </value>
                <value>
                    <fullName>Interim Financial</fullName>
                </value>
                <value>
                    <fullName>PFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortization__c</fullName>
        <label>Amortization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Cost_of_Living__c</fullName>
        <label>Annual Cost of Living</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Debt_Service__c</fullName>
        <formula>LLC_BI__Monthly_Debt_Service__c   * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Debt Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__COGS_Rev__c</fullName>
        <formula>IF(LLC_BI__Revenue__c &lt;&gt; 0,LLC_BI__COGS__c / LLC_BI__Revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COGS % Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__COGS__c</fullName>
        <label>COGS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Balance_Date__c</fullName>
        <label>Cash Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cash_Balance__c</fullName>
        <label>Cash Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <inlineHelpText>Comments included in email automatically sent</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comp__c</fullName>
        <label>Comp. Adj. Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BTR</fullName>
                </value>
                <value>
                    <fullName>PTR</fullName>
                </value>
                <value>
                    <fullName>Interim Financial</fullName>
                </value>
                <value>
                    <fullName>PFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_AP__c</fullName>
        <label>Current AP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DSC_Ratio_Post_OC__c</fullName>
        <formula>IF( LLC_BI__Net_Operating_Income__c&lt;&gt;0 &amp;&amp; LLC_BI__Financials_Period__c&lt;&gt;0 &amp;&amp; LLC_BI__Annual_Debt_Service__c&lt;&gt;0,(12/ LLC_BI__Financials_Period__c)*( LLC_BI__Net_Operating_Income__c - LLC_BI__Officer_Comp__c ) / LLC_BI__Annual_Debt_Service__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSC Ratio (Post OC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DSC_Ratio_Pre_OC__c</fullName>
        <formula>IF (LLC_BI__Net_Operating_Income__c&lt;&gt;0 &amp;&amp; LLC_BI__Financials_Period__c &lt;&gt; 0 &amp;&amp; LLC_BI__Annual_Debt_Service__c&lt;&gt;0, ((12/ LLC_BI__Financials_Period__c)*LLC_BI__Net_Operating_Income__c) / LLC_BI__Annual_Debt_Service__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSC Ratio (Pre OC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Service_Override__c</fullName>
        <inlineHelpText>System defaults to current monthly payment.  Only use if you wish to override in the case of a loan modification, etc.</inlineHelpText>
        <label>Debt Service Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Service_Value__c</fullName>
        <label>Debt Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Service__c</fullName>
        <formula>LLC_BI__Debt_Service_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debt Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Depr_Source__c</fullName>
        <label>Depr. Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BTR</fullName>
                </value>
                <value>
                    <fullName>PTR</fullName>
                </value>
                <value>
                    <fullName>Interim Financial</fullName>
                </value>
                <value>
                    <fullName>PFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Depreciation__c</fullName>
        <label>Depreciation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EPC_Source__c</fullName>
        <label>EPC Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BTR</fullName>
                </value>
                <value>
                    <fullName>PTR</fullName>
                </value>
                <value>
                    <fullName>Interim Financial</fullName>
                </value>
                <value>
                    <fullName>PFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Expenses__c</fullName>
        <formula>IF( LLC_BI__Financial_Report_Version__c = 1, (LLC_BI__Revenue__c -  LLC_BI__Net_Income__c -  LLC_BI__COGS__c -  LLC_BI__Staff_Labor_Payroll__c -  LLC_BI__Other_Extraordinary_Expenses__c -  LLC_BI__Third_Party_Rent__c),  (LLC_BI__Revenue__c -  LLC_BI__Net_Income__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financial_Report_Version__c</fullName>
        <defaultValue>2</defaultValue>
        <description>For internal use, allows us to set the version of the financial report and as such, change equations across past and new reports. IE: Total Expenses</description>
        <label>Financial Report Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financials_Period__c</fullName>
        <label>Financials Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Annual_Debt_Service__c</fullName>
        <label>Personal Annual Debt Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Cash_Flow__c</fullName>
        <formula>((12/ LLC_BI__Financials_Period__c)*LLC_BI__Net_Operating_Income__c)  +  LLC_BI__Spouses_Salary__c  +  LLC_BI__Other_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Cash Flow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Cashflow_Reviewed__c</fullName>
        <label>Global Cashflow Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_DSCR__c</fullName>
        <formula>IF(LLC_BI__Global_Debt_Service__c &lt;&gt; 0, LLC_BI__Global_Cash_Flow__c / LLC_BI__Global_Debt_Service__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global DSC Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Debt_Service__c</fullName>
        <formula>IF( LLC_BI__Financial_Report_Version__c = 1, ((12*LLC_BI__Debt_Service__c) +  LLC_BI__Global_Annual_Debt_Service__c +  LLC_BI__Global_Other_Debt_Service__c +  LLC_BI__Annual_Cost_of_Living__c), ((12*LLC_BI__Debt_Service__c) +  (LLC_BI__Seller_Debt_Service__c * 12) + (LLC_BI__Other_Debt_Service__c * 12) + LLC_BI__Global_Annual_Debt_Service__c +  LLC_BI__Global_Other_Debt_Service__c +  LLC_BI__Annual_Cost_of_Living__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Debt Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Other_Debt_Service__c</fullName>
        <description>Such as student loans, mortgage, etc</description>
        <label>Annual Other Debt Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Include_in_DSCR_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in DSCR Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Source__c</fullName>
        <label>Interest Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BTR</fullName>
                </value>
                <value>
                    <fullName>PTR</fullName>
                </value>
                <value>
                    <fullName>Interim Financial</fullName>
                </value>
                <value>
                    <fullName>PFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest__c</fullName>
        <label>Interest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Debt_Service__c</fullName>
        <formula>IF( LLC_BI__Debt_Service_Override__c &gt; 0,
 LLC_BI__Debt_Service_Override__c,
LLC_BI__Debt_Service__c)


+ LLC_BI__Other_Debt_Service__c +  LLC_BI__Seller_Debt_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Debt Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Income__c</fullName>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Operating_Income__c</fullName>
        <formula>LLC_BI__Net_Income__c  +  LLC_BI__Amortization__c  +   LLC_BI__Depreciation__c  + LLC_BI__Interest__c  +  LLC_BI__Rent__c  +  LLC_BI__Officer_Comp__c +  LLC_BI__Other_Non_Cash_Charge__c + LLC_BI__Required_Officer_Comp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Operating Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Operating_Margin__c</fullName>
        <formula>IF(LLC_BI__Revenue__c &lt;&gt; 0,LLC_BI__Net_Operating_Income__c / LLC_BI__Revenue__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Operating Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_Cash_Source__c</fullName>
        <label>Non-Cash Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BTR</fullName>
                </value>
                <value>
                    <fullName>PTR</fullName>
                </value>
                <value>
                    <fullName>Interim Financial</fullName>
                </value>
                <value>
                    <fullName>PFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Officer_Comp__c</fullName>
        <label>Officer Comp Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operating_Expenses__c</fullName>
        <formula>LLC_BI__Revenue__c - LLC_BI__Net_Income__c - ( LLC_BI__Third_Party_Rent__c + LLC_BI__Staff_Labor_Payroll__c + LLC_BI__COGS__c + LLC_BI__Other_Extraordinary_Expenses__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operating Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Debt_Service__c</fullName>
        <label>Other Debt Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Extraordinary_Expenses__c</fullName>
        <label>Other Extraordinary Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Income__c</fullName>
        <label>Other Outside Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Non_Cash_Charge__c</fullName>
        <label>Other Non-Cash Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Practice__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Reports</relationshipLabel>
        <relationshipName>Financial_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rent__c</fullName>
        <label>EPC Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Req_Comp_Source__c</fullName>
        <label>Req. Comp. Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Report Debt Service * 2</fullName>
                </value>
                <value>
                    <fullName>Initial Loan Approval Summary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Required_Officer_Comp__c</fullName>
        <label>Required Officer Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reviewed__c</fullName>
        <label>Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reviewer__c</fullName>
        <label>Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NCINO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Seller_Debt_Service__c</fullName>
        <label>Seller Debt Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spouses_Salary__c</fullName>
        <label>Spouse&apos;s Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Staff_Labor_Payroll__c</fullName>
        <label>Staff Labor &amp; Payroll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Staff_Rev__c</fullName>
        <formula>IF(LLC_BI__Revenue__c &lt;&gt; 0, LLC_BI__Staff_Labor_Payroll__c / LLC_BI__Revenue__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff % Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Statement_Date__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Subdebt_Paid__c</fullName>
        <label>Seller Debt Pmt Permitted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Rent_Rev__c</fullName>
        <formula>IF(LLC_BI__Revenue__c&lt;&gt;0, LLC_BI__Third_Party_Rent__c / LLC_BI__Revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Third Party Rent % Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Rent__c</fullName>
        <label>Third Party Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Produced by Third Party</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Report</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{MM}-{YY}-{0}</displayFormat>
        <label>Financial Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>